Change name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dream-team-app",
+  "name": "dream-team-app-front",
   "private": true,
   "version": "1.0.0",
   "description": "franz-salinas-final-project-back-202309-mad",
