--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "api": "json-server --watch ./api/db.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.18.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "react-redux": "^8.0.1"
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
